# asteroid

./: .gitignore  .gitmodules  Dockerfile  README.md  asteroid.py  config.py  install.sh  pyproject.toml  requirements.txt
modules/: base_module.py  logger_config.py  utils.py
modules/10-katana/: install.sh  katana.py
modules/15-feroxbuster/: feroxbuster.py  install.sh
modules/20-gau/: gau.py  install.sh
modules/25-arjun/: arjun.py  install.sh
modules/30-directory-listing/: directory_listing.py
modules/35-sensitive-files/: install.sh  sensitive_files.py
modules/40-trufflehog/: install.sh  trufflehog.py
modules/45-extension-inspector/: extension_inspector.py
modules/50-vulnscan/: install.sh  requirements.txt  vulnscan.py
modules/55-retirejs/: install.sh  requirements.txt  retirejs.py
modules/60-nuclei/: install.sh  nuclei.py
modules/60-nuclei/custom-templates/cmdi/: blind-oast-polyglots.yaml  ruby-open-rce.yaml
modules/60-nuclei/custom-templates/cookies/: cookies-without-samesite.yaml
modules/60-nuclei/custom-templates/crlf/: cookie-injection.yaml  crlf-injection.yaml
modules/60-nuclei/custom-templates/csti/: angular-client-side-template-injection.yaml
modules/60-nuclei/custom-templates/injection/: csv-injection.yaml  xinclude-injection.yaml
modules/60-nuclei/custom-templates/lfi/: lfi-keyed.yaml  linux-lfi-fuzz.yaml  windows-lfi-fuzz.yaml
modules/60-nuclei/custom-templates/redirect/: open-redirect.yaml
modules/60-nuclei/custom-templates/rfi/: generic-rfi.yaml
modules/65-file-upload/: file-upload.py
(+8 files in other folders)
