[project]
name = "asteroid"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.11.18",
    "aiolimiter>=1.2.1",
    "beautifulsoup4>=4.13.4",
    "coloredlogs>=15.0.1",
    "cvss>=3.4",
    "markdown>=3.8",
    "packaging>=25.0",
    "requests>=2.32.3",
    "requests-ratelimiter>=0.7.0",
    "tqdm>=4.67.1",
    "ujson>=5.10.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.10",
]

[tool.ruff]
exclude = ["search_vulns"]
